<resources>
    <string name="app_name">SolarisNavi</string>
    <string name="speed_label">Speed</string>
    <string name="speed_measure">km/h</string>
    <string name="course_label">Course:</string>
    <string name="accuracy_label">Accuracy:</string>
    <string name="tracking_source_label">Tracking:</string>
    <string name="distance_label">Distance</string>
    <string name="timeToArrival_label">in</string>
    <string name="timeAtArrival_label">Arrival at</string>
</resources>
